--- a/programming-language-rust-serde.html
+++ b/programming-language-rust-serde.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="A create used to serialize and deserialize.">
+    <meta name="description" content="A crate used to serialize and deserialize.">
     <title>Rust Ecosystem: Serde | post-notes</title>
-    <meta name="description" content="A create used to serialize and deserialize.">
+    <meta name="description" content="A crate used to serialize and deserialize.">
 
    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦕</text></svg>">
  
@@ -2193,7 +2193,7 @@
                 <p>Rust Ecosystem: Serde</p>
 
                 <span>description</span><br>
-                <p>A create used to serialize and deserialize.</p>
+                <p>A crate used to serialize and deserialize.</p>
 
                 
             </div>
